# react-native-turbo-starter

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-turbo-starter.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativeturbostarter/: TurboStarterModule.java  TurboStarterModule.kt  TurboStarterPackage.java  TurboStarterPackage.kt
android/src/main/jni/: cpp-adapter.cpp  log.h
cpp/: react-native-turbo-starter.cpp  react-native-turbo-starter.h
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativeturbostarter/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/jni/: Android.mk  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/TurboStarterExample/: AppDelegate.m  AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/TurboStarterExample.xcodeproj/: project.pbxproj
example/ios/TurboStarterExample.xcodeproj/xcshareddata/xcschemes/: TurboStarterExample.xcscheme
example/ios/TurboStarterExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: TurboStarter.h  TurboStarter.mm
ios/TurboStarter.xcodeproj/: project.pbxproj
scripts/: rename.js
src/: NativeTurboStarter.ts  index.tsx
(+5 files in other folders)
